--- a/views/success.html
+++ b/views/success.html
@@ -2,16 +2,24 @@
 
     <div class="textinto">
         <h1>Success</h1>
-
+        <p>{{message}}</p>
         <p style="color: red">Welcome To Users Exquisites Page {{ message }}<a href="#!" ng-click="logout()">Logout</a>
         </p>
     </div>
 
     <div class="container">
+        <div class="filter">
+            <label>Search Entries For Specified Details:</label>
+            <div class="form-group">
+                <input type="text" name="user.search" class="form-control" ng-model="user.search"
+                placeholder="Filter Entries By FirstName, LastName or Email">
+            </div>
+           
+        </div>
         <table class="table table-striped table-dark">
             <thead>
                 <tr>
-
+                
                 <th>#</th>
                 <th>RegDate</th>
                 <th>FirstName</th>
@@ -20,12 +28,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="list in user">
+        <tr ng-repeat="list in user | filter: user.search">
                     <td>{{$index + 1}}</td>
                     <td>{{list.date | date: 'mediumDate'}}</td>
-                    <td>{{list.firstname}}</td>
-                    <td>{{list.lastname}}</td>
+                    <td>{{list.firstname | uppercase }}</td>
+                    <td>{{list.lastname | uppercase }}</td>
                     <td>{{list.email}}</td>
+                    <td><button type="button" class="btn btn-danger"  ng-click="deleteBtn(user)">X</button></td>
                 </tr>
             </tbody>
         </table>
